examples/test/testpolicy17461.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17461
  namespace: namespace110
spec:
  podSelector:
    matchLabels:
      key25: value35
      key45: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value0
          key5: value25
          key32: value1
      podSelector:
        matchLabels:
          key40: value46
          key0: value34
          key45: value36
